109
-- changed --help to give overview of help
-- fixed stream_ip alerts (defrag -> stream_ip)

108
-- added IpsAction for ips rule action plugins
-- renamed various api *init() and *term() for consistency and possible
   move to base api

107
-- fixed stats output
-- deleted code that skipped over TCP urgent data when flushing
-- added StreamSplitter::reassemble() etc for PAR
-- updated ppm output to use stats functions for consistency
-- fixed old HI chunk splitting
-- changed stream tcp to use StreamSplitter::reassemble() instead of
    direct memcpy()
-- several new Xcode warnings cleaned up (mostly unused funcs)
-- fixed dynamic build of ips options

106
-- converted fpdetect.cc to pull fast pattern buffers from inspector gadget

105
-- changed PREPROC to MODULE in profiling defines
-- added --rule "<rule>" for easy command line testing
-- added --list-plugins to see which plugins don't have modules
-- added helpers/markup.{h,cc}
-- added optional header selector to http_header

104
-- changed configure --with-libpcre-* to --with-pcre-* for consistency
-- same for pcap (again!)
-- made ppm and perfprofiling disabled by default in configure.ac
-- added stream_size and stream_reassemble ips options

103
-- added modules to ips options
-- removed ips option sameip which was obsoleted by 116:152
-- content args offset, depth, distance, and within must be followed by a
   space not a colon
-- latest snort2lua updates from josh

102
-- moved stats (peg counts) to module
-- removed sum() and stats() from InspectApi
-- tweaked --help-module

101
-- tweaked startup output
-- fixed pattern matcher
-- pulled in latest from Tom

100
-- adding profiling to module
-- profile.preprocs is now profile.modules

99
-- updated wizard
-- removed service / app id from inspectors

98
-- initial wizard implementation

97
-- latest from Tom
-- some valgrind fixes

96
-- finished default fp selection
-- added NHttpInspect::get_buf() and related

95
-- added some wizard module foo