@@ -1,6 +1,7 @@
 109
 -- changed --help to give overview of help
 -- fixed stream_ip alerts (defrag -> stream_ip)
+-- added missing help to parameters
 
 108
 -- added IpsAction for ips rule action plugins
